# sketch

./: .gitignore  128x128.xcf  Cargo.toml  README.md  mac-release.sh  package-release.sh  review.sh
regression/: circle.json  figure.json  heart.json  rectangle.json  sketch-000.json
src/: fft.rs  layer.rs  main.rs  moments.rs  pixels.rs  pixeltree.rs  tween.rs
todo/: heart.json  hollow-and-solid-moving.json
