[package]
name = "sketch-space-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ordered-float = "3.0.0"
macroquad = "0.3.0"
rand = "0.8.5"
tinyset = { dversion = "0.4.14", features = ["compactserde"] }
serde = { version = "1.0", features = ["derive"] }
glam = { version = "0.21.3", features = ["serde"] }
serde_json = "1.0"
bincode = "1.3.3"
gif = "0.11.4"