[package]
name = "color-splotch"
version = "0.1.0"
edition = "2021"
description = "A drawing and animation program for children"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ordered-float = "3.0.0"
macroquad = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
glam = { version = "0.21.3", features = ["serde"] }
serde_json = "1.0"
bincode = "1.3.3"
gif = "0.11.4"

[package.metadata.bundle]
name = "ColorSplotch"
identifier = "org.abridgegame.colorsplotch"
icon = ["32x32.png", "128x128.png"]
# resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) David Roundy 2022. All rights reserved."
category = "Graphics and Design"
short_description = "A drawing and animation program for children."
long_description = """
A drawing program designed for kindergarten-level children, Color Splotch
is designed to be used without keyboard or menus.
"""
# deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
# osx_frameworks = ["SDL2"]